[package]
name = "orca-pty"
version = "0.0.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local PTY spawning for Orca (replaces node-pty), backed by vendored portable-pty."

[dependencies]
# default-features off keeps it stripped — notably excludes the optional `ssh`
# feature (which would pull libssh2) and serde support. The native PTY system,
# CommandBuilder, and Child are always available.
portable-pty = { version = "0.8", default-features = false }

# Safe wrappers over kill(2) for delivering named signals to the child (node-pty's
# `kill(signal)`). Unix-only: `nix` is an empty crate on Windows, which has no
# POSIX signals — the Rust daemon that delivers them runs on Unix only. Already in
# the graph via portable-pty; `signal`+`process` are the only features we use.
# signal+process: kill(2) for named signals. fs+poll: the O_NONBLOCK gather
# drain (fcntl/read) + its refill bridge and the EAGAIN-safe write retry (poll).
[target.'cfg(unix)'.dependencies]
nix = { version = "0.25", default-features = false, features = ["signal", "process", "fs", "poll"] }

[lints.rust]
unsafe_code = "forbid"
